--- a/src/BookStore.Web/Pages/Books/index.cshtml
+++ b/src/BookStore.Web/Pages/Books/index.cshtml
@@ -1,8 +1,12 @@
 ﻿@page
 @using BookStore.Localization
+@using BookStore.Permissions
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Localization
 @model BookStore.Web.Pages.Books.indexModel
 @inject IStringLocalizer<BookStoreResource> L;
+@inject  IAuthorizationService auth
 @section scripts {
     <abp-script src="/Pages/Books/Index.js" />
 }
@@ -18,10 +22,15 @@
                 <abp-card-title>@L["Books"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-end">
-                <abp-button id="NewBookButton"
-                            text="@L["NewBook"].Value"
-                            icon="plus"
-                            button-type="Primary" />
+     
+                @if (await auth.IsGrantedAsync(BookStorePermissions.Books.Create))                
+                {
+                    <abp-button id="NewBookButton"
+                                text="@L["NewBook"].Value"
+                                icon="plus"
+                                button-type="Primary"/>
+                }
+
             </abp-column>
         </abp-row>
     </abp-card-header>
